# lems-anechoic

./: .gitignore  README.md  analysis.py  angles.py  app.py  blah.py  config.json  config.py  controller.py  graph.py  grid.py  issue_8.py  junk.py  lab.jsonl  lab.py  lab_data.csv  lab_graph.py  lab_turntable.csv  mayo.py  params.json  pyproject.toml  requirements.txt  run_experiment.py  spec_an.csv  speeds.txt  terminal.py  test-connection.py  test.csv  test_turn_table.py  turntable.csv  turntable_move_times.csv  turntable_move_times.txt  turntable_with_jumps.csv
.github/workflows/: release.yaml
docs/: turntable.md
docs/resources/: anechoic-cartoon.pdn  tilt-angle-detail.pdn
experiments/3x3_8.45_GHz/: experiment_metadata.json
msu_anechoic/: __init__.py  _turn_table_elevation_regime.py  azel.py  experiment.py  parse_az_el.py  procedures.py  sig_gen.py  sig_gen_enums.py  sound.py  spec_an.py  turn_table.py  turn_table_2.py  turntable.py
msu_anechoic/util/: _numpy.py  azel.py  coordinate.py  grid.py  turntable_position.py
tests/: coordinates.csv  create_test_cases.py  mock_turntable.csv  mock_turntable.py  test_azel.py  test_coordinate.py
