[project]
name = "lems-anechoic"
version = "0.1.0"
description = "LEMS anechoic chamber test scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "msu-ssc[logging,pretty]",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pyserial>=3.5",
    "pyvisa>=1.14.1",
    "scipy>=1.15.2",
]

[project.optional-dependencies]
mayo = [
    "scipy>=1.15.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "F541", # f-string without any placeholders
]
extend-select = [
    "I001",
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["lems_a3", "moc_tools"]


[tool.uv.sources]
msu-ssc = { git = "https://github.com/msu-ssc/msu-ssc" }
