[project]
name = "lems-anechoic"
# version = "0.1.0"
dynamic = ["version"]
description = "LEMS anechoic chamber test scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "msu-ssc[logging,pretty]",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pyserial>=3.5",
    "pyvisa>=1.14.1",
    "scipy>=1.15.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"


[project.optional-dependencies]
mayo = [
    "scipy>=1.15.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "F541", # f-string without any placeholders
]

extend-select = [
    "I001",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["lems_a3", "moc_tools"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]


[tool.uv.sources]
msu-ssc = { git = "https://github.com/msu-ssc/msu-ssc" }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
